# 2021_WadaAndoLab_Decommissioning_Robot_Contest

./: README.md
CANMD_STM32CudeIDE_Files/MOTORDRIVER_STMF303K8/: .cproject  .mxproject  .project  MOTORDRIVER_STMF303K8 Debug.launch  MOTORDRIVER_STMF303K8.ioc
CANMD_STM32CudeIDE_Files/MOTORDRIVER_STMF303K8/Core/Inc/: stm32f3xx_hal_conf.h
CANMD_STM32CudeIDE_Files/MOTORDRIVER_STMF303K8/Debug/: MOTORDRIVER_STMF303K8.elf  MOTORDRIVER_STMF303K8.list  MOTORDRIVER_STMF303K8.map  makefile  objects.list
Rev3_ROS_MAIN_BOARD/src/: Adafruit_BNO055.cpp  Adafruit_BNO055.h  Adafruit_I2CDevice.cpp  Adafruit_Sensor.h  PrettyPrint.hpp  main.cpp  mcp_can.cpp  mcp_can_dfs.h
SensorBoard_MbedStudio_Files/SENSOR_BOARD_F303K8_MBED/: CAN_Transmitter_Example.txt  PixelArray.cpp  PixelArray.h  QEI.cpp  QEI.hpp  WS2812.cpp  WS2812.h  WS2812B_Controller.h  main.cpp
URDF用データ/サイズ修正済みSTL/ver1_08-16/: asm-01d-third-frame-unit.stl  asm-03c-ud-drive-unit1.stl  ots-barrel-display_s.stl
URDF用データ/サイズ修正済みSTL/ver2_10-03/: 03-asm-mechanum-l.stl  03-asm-mechanum-r.stl  asm-01d-rail-c.stl  asm_field.stl
URDF用データ/サイズ修正済みSTL/ver3_11-01/: 01-robot-tras.stl  asm-01d-top-base-d-frame-unit.stl  asm-01f-hand-base-unit.stl  asm-03f-tip-slider-unit.stl
URDF用データ/サイズ修正済みSTL/ver5_11-20/: asm_field.stl
URDF用データ/ブレンダーファイル/ver1/: 03-asm-mechanum-l.blend  03-asm-mechanum-r.blend  asm-01d-third-frame-unit.blend  asm-01d-top-base-d-frame-unit.blend  asm-01d-under-base-frame.blend  asm_field.blend  asm_field.blend1  ots-barrel-display_s.blend  ots-barrel-display_s.blend1  work.blend  work.blend1
URDF用データ/ブレンダーファイル/ver2/: 03c-all-base-drive.blend  asm-01d-rail-c.blend  asm-01d-third-frame-unit.blend  asm_field.blend
URDF用データ/生STL/ver1_08-16/: 03-asm-mechanum-r.stl  asm-01d-third-frame-unit.stl  asm-01d-top-base-d-frame-unit.stl  asm-01d-under-base-frame.stl  asm-03c-ud-drive-unit1.stl  asm-03c-ud-drive-unit2.stl  asm_field.stl
URDF用データ/生STL/ver2_10-03/: 03-asm-mechanum-l.stl  03c-all-base-drive.stl  asm-01d-rail-c.stl  asm-01d-third-frame-unit.stl  asm-01d-top-base-d-frame-unit.stl  asm_field.stl  ots-barrel-display_s.stl
URDF用データ/生STL/ver3_11-01/: 01-robot-tras.stl  asm-01d-third-frame-unit.stl  asm-01d-top-base-d-frame-unit.stl  asm-01f-hand-base-unit.stl  asm-02d-top-hand-base-c.stl  asm-03c-ud-drive-unit1.stl  asm-03c-ud-drive-unit2.stl  asm-03f-tip-slider-unit.stl
URDF用データ/生STL/ver5_11-20/: asm_field.stl
drawio/: 廃炉ロボットコントローラバインド.drawio
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros_ws/src/commissioning_robot/: CMakeLists.txt  package.xml
ros_ws/src/commissioning_robot/cfg/: Tutorials.cfg  encoder_port.cfg  motor_port.cfg  robot_param.cfg  switch_port.cfg
ros_ws/src/commissioning_robot/config/: control.yaml  control_allvelocity.yaml  gazebo_setting.yaml  lift_pid.yaml  real_SETTING.rviz  sim_SETTING.rviz
ros_ws/src/commissioning_robot/include/: pid_controller.hpp  position_motordrive.hpp  utils.hpp  velocity_motordrive.hpp
ros_ws/src/commissioning_robot/launch/: camera.launch  gazebo_sim_full.launch  hana_camera.launch  mechanum_test.launch  model_check.launch  nodetest_remote.launch  posuta_you.launch  real.launch  real_sim_full.launch  remote_client.launch  remote_master.launch  rviz_tf_test.launch  sim.launch  sim_sensor_real_comb.launch
ros_ws/src/commissioning_robot/models/room1/: asm_field.stl  model.config  model.sdf
ros_ws/src/commissioning_robot/msg/: ControlState.msg  FeedbackState.msg  MechanismReport.msg  PhaseReport.msg
ros_ws/src/commissioning_robot/scripts/: hana_camera.py
ros_ws/src/commissioning_robot/src/: arm_controller.cpp  cable_manager_controller.cpp  can_bridge.cpp  drive_inverse_kinematics.cpp  drive_lift_controller.cpp  drive_wheel_controller.cpp  gazebo_publisher.cpp  main_lift_controller.cpp  pose_controller.cpp  robot_core.cpp  robot_tf_publisher.cpp  rviz_publisher.cpp  server.cpp  sim_bridge.cpp
ros_ws/src/commissioning_robot/stl/: asm-01d-top-base-d-frame-unit.stl  asm-01d-under-base-frame.stl  asm-03c-ud-drive-unit2.stl
ros_ws/src/commissioning_robot/stl_ver2/: 03c-all-base-drive.stl  asm-01d-third-frame-unit.stl  asm-01d-top-base-d-frame-unit.stl
ros_ws/src/commissioning_robot/stl_ver3/: asm-01d-third-frame-unit.stl  asm-02d-top-hand-base-c.stl  asm-03c-ud-drive-unit1.stl  asm-03c-ud-drive-unit2.stl
ros_ws/src/commissioning_robot/urdf/: 000_robot_ver1.urdf  robot.urdf
ros_ws/src/commissioning_robot/worlds/: main_world.world
ros_ws/src/commissioning_robot/xacro/: color_preset_h.xacro  generate_macro_h.xacro  mechanum_macro_h.xacro  mechanum_test.xacro  robot.xacro  robot_full_view.xacro  robot_legacy_10_03_updated.xacro
ros_ws/src/myserial_py/: CMakeLists.txt  package.xml
論文用データ/: CAN接続図.drawio  ROS-CANブリッジモジュール概要図.drawio  ROS概念図.drawio  USB-CANファームウェアフロー.drawio  エンコーダアンチオーバーフロー.drawio  ブリッジノードフロー.drawio  廃炉ロボコンシステム構成.drawio  符号器・複号器.drawio  表作成シート.xlsx  通信フレームワーク概略図v5.drawio
(+117 files in other folders)
